<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">styletimer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_map">Map</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="facebook_app_id">649672478814493</string>
    <string name="fb_login_protocol_scheme">fb649672478814493</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Einstellungen</string>
    <string name="label_select_picture">Profilbild wählen</string>
    <string name="toast_cannot_retrieve_selected_image">Das ausgewählte Bild kann nicht angezeigt werden</string>
    <string name="toast_cannot_retrieve_cropped_image">Der ausgewählte Bildausschnitt kann nicht angezeigt werden</string>
    <string name="photo.jpg" translatable="false" tools:ignore="ExtraTranslation">_photo.jpg</string>
    <string name="toast_unexpected_error">Unerwarteter Fehler</string>
    <string name="pic_not_taken_error">Es wurde kein Foto aufgenommen!</string>
    <string name="settings">Einstellungen</string>
    <string name="cancel">STORNIEREN</string>
    <string name="permission_message">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
    <string name="file_provider_authorities" translatable="false">com.si.styletimer.provider</string>
    <string name="alert">Durch das Bestätigen deiner Buchung erklärst du dich mit unseren <font fgcolor='#E9744E'><u>Nutzungsbedingungen</u> </font> einverstanden</string>
    <string name="fav_msg">noch keine Favoriten hinzugefügt</string>
    <string name="salon_msg">Es gibt keinen Salon, der Ihrem Datum oder Ihren Kriterien entspricht</string>
    <string name="largetext">k</string>
    <string name="notification_image_saved">Invoice saved</string>
    <string name="notification_image_saved_click_to_preview">Invoice saved. Click to preview.</string>
    <string name="channel_name">ucrop_chanel</string>
    <string name="channel_description">ucrop result image</string>
    <string name="reschedule">Reschedule</string>
    <string name="notlisteed">Your salon not listed ? <font fgcolor='#00B3BE'> <u>Click here</u> </font></string>
    <string name="your_registration">Your registration has been \ndone successfully.</string>
    <string name="click_on_the_link">Click on the link which we have sent on your \nemail for activating your account.</string>
    <string name="canceltext"><b>Bitte buche verantwortungsvoll.</b> Für die auf styletimer gelisteten Salons ist ein Nichterscheinen, oder eine sehr kurzfristige Stornierung mit Problemen verbunden. Bitte verlege oder storniere deine Buchung daher rechtzeitig über styletimer, falls du deinen gebuchten Termin doch nicht wie geplant wahrnehmen kannst.</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_favourites">My Favourites</string>
    <string name="search_for_salon_name">Search for salon name</string>
    <string name="all_treatments">All treatments</string>
    <string name="last_searched_salon">Last Searched Salon</string>
    <string name="oops_no_salon_is_found">OOPS! No Salon is Found</string>
    <string name="want_your_salon_to_be_on_styletimer">Want your salon to be on styletimer ?</string>
    <string name="add_your_salon">Add your salon</string>
    <string name="add_salon">Add Salon</string>
    <string name="your_name">Your name</string>
    <string name="name_of_salon">Name of Salon</string>
    <string name="city_of_salon">City of Salon</string>
    <string name="save">Save</string>
    <string name="saveto">Save</string>
    <string name="thank_you_for_your_review">Thank you for your review.</string>
    <string name="go_to_booking">Go To Booking</string>
    <string name="looking_for_a_booking">Looking for a booking?</string>
    <string name="manage_your_existing_bookings_nby_signing_in_to_the_app">Manage your existing bookings\nby signing in to the app</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="new_to_styletimer">New to Styletimer?</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="create_new_account">Create New account</string>
    <string name="by_continuing_you_agree_to">By continuing you agree to</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_amp_will_send_you_a_link_nto_reset_your_password"><![CDATA[Enter your email & will send you a link\nto reset your password]]></string>
    <string name="next">NEXT</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="email_sent">Email sent</string>
    <string name="please_check_your_registered_email_for_password_reset_instructions">Please check your registered email for password reset instructions.</string>
    <string name="log_in_again">LOG IN AGAIN</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="receive_newsletter_from_styletimer">Receive newsletter from styletimer</string>
    <string name="tick_to_allow_the_venue_i_m_booking_with_to_send_me_emails_and_sms_about_their_services">Erlaube Salons, dir E-Mails und Benachrichtigungen über Services zu senden</string>
    <string name="you_can_change_your_preferences_at_anytime_find_out_how_in_our_privacy_policy">You can change your preferences at anytime, find out how in our privacy policy.</string>
    <string name="sign_up">sign up</string>
    <string name="please_enter_firstname">Please enter your first name</string>
    <string name="please_enter_lastname">Please enter your last name</string>
    <string name="please_enter_dob">Please enter date of birth</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="confirm_password_not_match">Confirm password doesn\'t match</string>
    <string name="please_check_term_and_condition">Please check terms and conditions</string>
    <string name="my_profile">My profile</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="telephone">Telephone</string>
    <string name="street">Street</string>
    <string name="select_country">Select country</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="select_gender">Select gender</string>
    <string name="newsletter_subscription">Newsletter Subscription.</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="please_enter_old_pass">Please enter your old password</string>
    <string name="please_enter_new_password">Please enter your new password</string>
    <string name="password_successfully_changed">Password successfully changed</string>
    <string name="select_action">Select Action</string>
    <string name="select_gallery">Select photo from gallery</string>
    <string name="select_camara">Capture photo from camera</string>
    <string name="my_favourite">My Favourite</string>
    <string name="your_favourite">Your Favourite</string>
    <string name="are_you_remove_favourite">Are you sure to remove this Salon from your Favourite List</string>
    <string name="upcoming_booking">UPCOMING BOOKING</string>
    <string name="recent_booking">RECENT BOOKING</string>
    <string name="rebook">REBOOK</string>
    <string name="review">REVIEW</string>
    <string name="rate_and_review">Rate and Review</string>
    <string name="rate_your_overall_experience">Rate your overall experience!</string>
    <string name="write_review">Write review</string>
    <string name="review_as_anonymous">Review as Anonymous</string>
    <string name="submit_review">SUBMIT REVIEW</string>
    <string name="please_select_your_rating">Please select your rating</string>
    <string name="booking_details">Booking Details</string>
    <string name="services">SERVICES</string>
    <string name="employee">Employee</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total amount</string>
    <string name="call_salon_number">Call salon number</string>
    <string name="salon_profile">Salon Profile</string>
    <string name="salon_address">Salon Address</string>
    <string name="view_map">View Map</string>
    <string name="view_receipt">View Receipt</string>
    <string name="your_rating_amp_review"><![CDATA[Your Rating & Review]]></string>
    <string name="your_rating_amp_review_after"><![CDATA[Your Rating & Review:]]></string>
    <string name="your_rating_here">your rating here</string>
    <string name="click_to_view_your_review">click to view your review</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="are_you_sure_cancel_booking">Are you sure you want to cancel this booking?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="other">Other</string>
    <string name="booked_accidentally">Booked Accidentally</string>
    <string name="no_time">No Time</string>
    <string name="sick">Sick</string>
    <string name="are_you_sure_you_want_to_reschedule_this_booking">Are you sure you want to Reschedule this booking ?</string>
    <string name="reason_for_cancellation_of_booking">Reason for cancellation of booking</string>
    <string name="map">Map</string>
    <string name="show_all_services">Show all services…</string>
    <string name="disstance">Disstance </string>
    <string name="filter_by_price_rating">Filter by price, rating…</string>
    <string name="list">List</string>
    <string name="salon_found"> salon found </string>
    <string name="near_you">Near you</string>
    <string name="within_0_2_km">Within 0.2 KM</string>
    <string name="within_0_5_km">Within 0.5 KM</string>
    <string name="within_1_km">Within 1 KM</string>
    <string name="within_3_km">Within 3 KM</string>
    <string name="within_5_km">Within 5 KM</string>
    <string name="within_10_km">Within 10 KM</string>
    <string name="within_20_km">Within 20 KM</string>
    <string name="apply">APPLY</string>
    <string name="any_time">Any Time</string>
    <string name="date">DATE</string>
    <string name="any_date">Beliebig Datum</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="choose_date">Choose date</string>
    <string name="time">TIME</string>
    <string name="sort">Sort</string>
    <string name="all">All</string>
    <string name="max_price">Max. price</string>
    <string name="any_price">Any price</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="closest_to_location">Closest to location</string>
    <string name="most_reviews">Most reviews</string>
    <string name="sort_by">Sort by</string>
    <string name="enter_location_street_or_postcode">Enter location, street or postcode</string>
    <string name="resend_account_activation_mail"><u>E-Mail mit Kontoaktivierungslink erneut senden</u></string>
</resources>