<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dp_16"
    android:elevation="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20.2sp"
            android:textColor="@color/font_black"
            android:text="@string/sort_by"
            android:padding="@dimen/dp_24"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_96"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_30"
            android:id="@+id/rdGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_rated"
                android:id="@+id/high"
                android:paddingLeft="@dimen/dp_20"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/lowest_price"
                android:paddingLeft="@dimen/dp_20"
                android:id="@+id/low"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/closest_to_location"
                android:paddingLeft="@dimen/dp_20"
                android:id="@+id/close"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/most_reviews"
                android:paddingLeft="@dimen/dp_20"
                android:id="@+id/review"/>

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>