<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dp_16"
    android:elevation="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:textColor="@color/font_black"
            android:text="@string/email_sent"
            android:textSize="20.2sp"
            android:fontFamily="@font/helvetica_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_24"
            android:lineHeight="@dimen/dp_24"
            android:fontFamily="@font/helvetica_regular"
            android:textColor="@color/font_grey"
            android:text="@string/please_check_your_registered_email_for_password_reset_instructions"
            android:textSize="16.16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_54"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_13"
            android:textColor="@color/orange"
            android:text="@string/log_in_again"
            android:textSize="14.14sp"
            android:id="@+id/tvLogin"
            android:fontFamily="@font/helvetica_regular" />

    </LinearLayout>

</androidx.cardview.widget.CardView>