<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:selectAllOnFocus="true"
        android:background="@color/white"
        tools:context=".activity.LocationSearchActivity">

        <RelativeLayout
            android:id="@+id/searchlayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:elevation="@dimen/dp_5"
            android:background="@color/colorPrimaryDark">

            <!--<ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_14"
                android:padding="@dimen/dp_2"
                android:src="@drawable/ic_back" />-->

            <ImageView
                android:focusable="true"
                android:clickable="true"
                android:layout_width="@dimen/dp_38"
                android:layout_height="@dimen/dp_38"
                android:layout_marginLeft="@dimen/dp_10"
                android:src="@drawable/ic_circle_ripple"
                android:background="@drawable/ic_back_round"
                android:tint="@color/colorAccent"
                android:id="@+id/ivClose"
                android:layout_centerVertical="true"/>

            <AutoCompleteTextView
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_9"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_toRightOf="@+id/ivClose"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:fontFamily="@font/helvetica_regular"
                android:hint="@string/enter_location_street_or_postcode"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20.2sp" />

            <ImageView
                android:id="@+id/ivRemove"
                android:layout_width="@dimen/dp_34"
                android:layout_height="@dimen/dp_34"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_15"
                android:padding="@dimen/dp_5"
                android:src="@drawable/ic_close"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchlayout"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlNearMe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:clickable="true">

                <ImageView
                    android:id="@+id/ivNear"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:padding="@dimen/dp_2"
                    android:src="@drawable/ic_near_me" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:layout_toRightOf="@+id/ivNear"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/helvetica_regular"
                    android:maxLines="1"
                    android:text="@string/near_you"
                    android:textColor="@color/font_grey"
                    android:textSize="14.2sp" />
            </RelativeLayout>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_marginBottom="@dimen/dp_100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvOne"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_0_2_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                    <TextView
                        android:id="@+id/tvTwo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_0_5_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                    <TextView
                        android:id="@+id/tvThree"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_1_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                    <TextView
                        android:id="@+id/tvFour"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_3_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                    <TextView
                        android:id="@+id/tvFive"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_5_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                    <TextView
                        android:id="@+id/tvSix"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_10_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                    <TextView
                        android:id="@+id/tvSeven"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_46"
                        android:fontFamily="@font/helvetica_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:text="@string/within_20_km"
                        android:textColor="@color/font_grey"
                        android:textSize="14.2sp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchlayout"
            android:layout_marginBottom="@dimen/dp_5"
            app:cardCornerRadius="@dimen/dp_2"
            app:cardElevation="@dimen/dp_10">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:elevation="@dimen/dp_5"
            android:padding="@dimen/dp_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btApply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/bg_login_gradient"
                    android:text="@string/apply"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>